--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,9 @@ jobs:
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+
 
