--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,7 @@ jobs:
           npm run build
 
       - name: Deploy 🚀
-        uses: peaceiris/actions-gh-pages@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          publish_dir: ./dist
+          branch: gh-pages
+          folder: dist
